--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vite": "^4.0.0",
     "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "postcss": "^8.4.0",
+    "terser": "^5.24.0"
   }
 }
