--- a/.gitignore
+++ b/.gitignore
@@ -12,11 +12,14 @@
 
 # Misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env
+.env.development
+.env.test
+.env.production
 
 # Logs
 npm-debug.log*
